// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlineFilledCard renders with base props 1`] = `
<article
  className="lab-card lab-card--outline lab-card--filled lab-card--teal
          
          
          
        "
>
  Content
</article>
`;

exports[`OutlineFilledCard renders with extra className 1`] = `
<article
  className="lab-card lab-card--outline lab-card--filled lab-card--teal
          
          
           test-classname
        "
>
  Content
</article>
`;

exports[`OutlineFilledCard renders with isCompact 1`] = `
<article
  className="lab-card lab-card--outline lab-card--filled lab-card--teal
           lab-card--compact
          
          
        "
>
  Content
</article>
`;

exports[`OutlineFilledCard renders with isHorizontal 1`] = `
<article
  className="lab-card lab-card--outline lab-card--filled lab-card--teal
          
           lab-card--horizontal
          
        "
>
  Content
</article>
`;
